FIX set missing hyphen vars and fix typo

--- a/resources/views/Checkout/Components/AcceptGtcCheck.twig
+++ b/resources/views/Checkout/Components/AcceptGtcCheck.twig
@@ -16,7 +16,7 @@
 
             {% set policyContent %}<!--
                 --><a href="/privacy-policy" target="_blank">
-                    <span>{{ trans("Ceres::Template.checkoutPrivacyPolicy", , {"hyphen": "&shy;"}) }}</span>
+                    <span>{{ trans("Ceres::Template.checkoutPrivacyPolicy", {"hyphen": "&shy;"}) }}</span>
                 </a><!--
             -->{% endset %}
 
