--- a/resources/views/MyAccount/Components/ChangePaymentMethod.twig
+++ b/resources/views/MyAccount/Components/ChangePaymentMethod.twig
@@ -83,7 +83,7 @@
                                         --><div class="content">
                                                 ${ paymentProvider.name }
                                                 <small v-if="paymentProvider.sourceUrl" class="pull-xs-right">
-                                                    <a :href="paymentProvider.sourceUrl" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> details</a>
+                                                    <a :href="paymentProvider.sourceUrl" rel="noopener noreferrer" target="_blank"><i class="fa fa-external-link" aria-hidden="true"></i> details</a>
                                                 </small>
                                                 <div>
                                                     <small>
