--- a/resources/views/PageDesign/Partials/VueError.twig
+++ b/resources/views/PageDesign/Partials/VueError.twig
@@ -58,7 +58,7 @@
                         {{ trans("Ceres::Template.vueErrorMessage") }}
                         {% endautoescape %}
                     </p>
-                    <a href="{{ trans("Ceres::Template.vueErrorLinkURL") }}" target="_blank" class="btn btn-primary btn-lg">{{ trans("Ceres::Template.vueErrorLink") }}</a>
+                    <a href="{{ trans("Ceres::Template.vueErrorLinkURL") }}" rel="noopener noreferrer" target="_blank" class="btn btn-primary btn-lg">{{ trans("Ceres::Template.vueErrorLink") }}</a>
                     <hr>
                 </div>
             </div>
