UPDATE rename section notFound to pageNotFound

--- a/resources/views/StaticPages/PageNotFound.twig
+++ b/resources/views/StaticPages/PageNotFound.twig
@@ -14,11 +14,11 @@
                 <div class="jumbotron default-not-found">
                     <div class="row">
                         <div class="col-md-6">
-                            <h1 class="display-3">{{ trans("Ceres::Template.notFoundOops") }}</h1>
-                            <p class="lead">{{ trans("Ceres::Template.notFoundPage") }}</p>
+                            <h1 class="display-3">{{ trans("Ceres::Template.pageNotFoundOops") }}</h1>
+                            <p class="lead">{{ trans("Ceres::Template.pageNotFoundPage") }}</p>
                             <hr class="m-y-2">
                             <p class="lead">
-                                <a class="btn btn-primary btn-lg" href="/" role="button"><i class="fa fa-home" aria-hidden="true"></i> {{ trans("Ceres::Template.notFoundHomepage") }}</a>
+                                <a class="btn btn-primary btn-lg" href="/" role="button"><i class="fa fa-home" aria-hidden="true"></i> {{ trans("Ceres::Template.pageNotFoundHomepage") }}</a>
                             </p>
                         </div>
                         <div class="col-md-6 text-md-right not-found-text">
