--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -1,15 +1,3 @@
-{#
-    {% if slides is empty %}
-        {% set slides = [
-            { imagePath: "http://placehold.it/800x400?text=First%20slide" },
-            { imagePath: "http://placehold.it/800x400?text=Second%20slide" },
-            { imagePath: "http://placehold.it/800x400?text=Third%20slide" }
-        ] %}
-    {% endif %}
-#}
-
-{# TODO: add placeholder images for slides #}
-
 {% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
 
 {% set carouselId = uid() %}
@@ -20,6 +8,8 @@
 
     {{ Twig.set("slide", "{ }") }}
 
+    {% set pushCurrentSlide = false %}
+
     {% if param.categoryId | trim is not empty %}
 
         {{ Twig.set("category", Twig.call("services.category.get", [param.categoryId])) }}
@@ -28,6 +18,8 @@
         {{ Twig.set("slide", "slide | merge({ name: category.details[0].name })") }}
         {{ Twig.set("slide", "slide | merge({ url: categoryUrl })") }}
         {{ Twig.set("slide", "slide | merge({ imageUrl: \"documents/\" ~ category.details[0].imagePath })") }}
+
+        {% set pushCurrentSlide = true %}
 
     {% elseif param.variationId | trim is not empty %}
 
@@ -43,17 +35,35 @@
         {{ Twig.set("slide", "slide | merge({ url: itemData | itemURL })") }}
         {{ Twig.set("slide", "slide | merge({ imageUrl: itemImage.url })") }}
 
+        {% set pushCurrentSlide = true %}
+
     {% endif %}
 
     {% if param.customImagePath | trim is not empty %}
 
         {{ Twig.set("slide", "slide | merge({ imageUrl: #{ param.customImagePath | json_encode } })") }}
 
+        {% set pushCurrentSlide = true %}
+
     {% endif %}
 
-    {{ Twig.set("slides", "slides | merge([slide])") }}
+    {% if pushCurrentSlide %}
+    
+        {{ Twig.set("slides", "slides | merge([slide])") }}
+
+    {% endif %}
 
 {% endfor %}
+
+{{ Twig.if("slides | length <= 0") }}
+
+    {% set placeholder1 = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_163165fc73f%20text%20%7B%20fill%3A%23555%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_163165fc73f%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23777%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22285.921875%22%20y%3D%22218.45%22%3EFirst%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" %}
+    {% set placeholder2 = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_163165fc742%20text%20%7B%20fill%3A%23444%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_163165fc742%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23666%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22247.3203125%22%20y%3D%22218.45%22%3ESecond%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" %}
+    {% set placeholder3 = "data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%20800%20400%22%20preserveAspectRatio%3D%22none%22%3E%3Cdefs%3E%3Cstyle%20type%3D%22text%2Fcss%22%3E%23holder_163165fc744%20text%20%7B%20fill%3A%23333%3Bfont-weight%3Anormal%3Bfont-family%3AHelvetica%2C%20monospace%3Bfont-size%3A40pt%20%7D%20%3C%2Fstyle%3E%3C%2Fdefs%3E%3Cg%20id%3D%22holder_163165fc744%22%3E%3Crect%20width%3D%22800%22%20height%3D%22400%22%20fill%3D%22%23555%22%3E%3C%2Frect%3E%3Cg%3E%3Ctext%20x%3D%22277%22%20y%3D%22218.45%22%3EThird%20slide%3C%2Ftext%3E%3C%2Fg%3E%3C%2Fg%3E%3C%2Fsvg%3E" %}
+
+    {{ Twig.set("slides", "[{ imageUrl: #{ placeholder1 | json_encode } }, { imageUrl: #{ placeholder2 | json_encode } }, { imageUrl: #{ placeholder3 | json_encode } }]") }}
+
+{{ Twig.endif() }}
 
 <div class="row">
     <div class="col-xs-12">
