--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -216,13 +216,18 @@
             (function($) {
                 $(document).on('shopbuilder.after.drop shopbuilder.after.widget_replace', function(event, eventData, widgetElement)
                 {
-                    var compiled = Vue.compile(eventData.htmlMarkup);
+                    var compiled = Vue.compile(widgetElement[0].outerHTML );
                     var component = new Vue({
                         store: window.ceresStore,
                         render: compiled.render,
                         staticRenderFns: compiled.staticRenderFns
                     });
                     component.$mount( widgetElement[0] );
+                    $(component.$el).find('*').each(function(index, elem) {
+                        $(elem).click(function(event) {
+                            event.preventDefault();
+                        });
+                    });
                 });
             })(jQuery);
         </script>
